player: backsteps reuse the discovered run and land preview-less
The discovery pass (keyframe toward the shown frame -- the only way to learn the predecessor's pts under variable frame rates) now keeps the whole pts run it decoded. Which pts precedes which is a static property of the file, so the memo never invalidates; a repeated backstep finds its target there and pays one decode run instead of two. The step's landing also skips the keyframe preview: for a one-frame step the preview is a backward picture jump, not feedback -- a superseding user seek mid-landing gets its preview back.

demo: route --enable-native-access through the Compose DSL -- the plugin assigns the run task's jvmArgs from it in afterEvaluate, so the flag appended at configuration time never reached the JVM (hence the skiko restricted-method warnings). README points consumers at the same flag for JDK 24+.